--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
 
   <properties>
     <java.version>17</java.version> <!-- Explicitly declare Java 17 -->
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <junit.jupiter.version>5.8.1</junit.jupiter.version>
+    <surefire.plugin.version>3.0.0-M5</surefire.plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -51,9 +55,19 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.11.0</version>
+      <version>${junit.jupiter.version}</version>
       <scope>test</scope>
     </dependency>
+   <!-- JUnit Jupiter API -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>${junit.jupiter.version}</version>
+        <scope>test</scope>
+    </dependency>
+
+
+
 
     <!-- Jakarta Servlet API (since Spring Boot 3 moved to Jakarta EE) -->
     <dependency>
@@ -110,6 +124,16 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${surefire.plugin.version}</version>
+            <configuration>
+                <includes>
+                    <include>**/*Test.java</include>
+                </includes>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
 </project>
