--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
     
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -114,6 +118,8 @@
     <artifactId>jakarta.validation-api</artifactId>
     <version>3.1.0</version>
 </dependency>
+
+
 
   </dependencies>
 
