fix the multinumber is same account for same webhook

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ replay_pid*
 # Unignore .zip files in bot_template folder
 !eva bot template/*.zip
 
+src/main/resources/application.properties.whatsapptemplate
+debugnotes
