--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@
 
 /.VSCodeCounter/
 
+# Ignore all files in the brokerConfigs directory
+resources/brokerConfigs/*
+
+# Do not ignore files ending in .template in the brokerConfigs directory
+!resources/brokerConfigs/*.template
+
+# Ignore all files in the not used configs directory
+resources/not used configs/*
 
 # Ignore .vscode directory
 /.vscode/
@@ -40,3 +48,4 @@ replay_pid*
 
 src/main/resources/application.properties.whatsapptemplate
 debugnotes
+cloudbuild.yaml
