improve bot and human message, exit and welcomeback

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ server.port=${PORT:8080}
 logging.level.root=INFO
 
 webhook.verificationtoken = 1234
+logging.pattern.console=%clr(%-20.20(%logger{0})){cyan} : %msg%n
